--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 			    border-radius: 8px;
 			    font-weight: 600;
 			}
+			.social-media p a {
+			    text-decoration: none;
+			    color: white;
+			}
 			.social-media p:hover {
 			    background-color: hsl(0, 0%, 8%);
 			    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
@@ -91,11 +95,29 @@
 			</figure>
 			<p class="job">"Front-end developer and avid reader."</p>
 			<div class="social-media">
-				<p>GitHub</p>
-				<p>Frontend Mentor</p>
-				<p>LinkedIn</p>
-				<p>Twitter</p>
-				<p>Instagram</p>
+				<p>
+					<a href="https://www.github.com" target="_blank">GitHub</a>
+				</p>
+				<p>
+					<a href="https://www.frontendmentor.io" target="_blank"
+						>Frontend Mentor</a
+					>
+				</p>
+				<p>
+					<a href="https://www.linkedin.com" target="_blank"
+						>LinkedIn</a
+					>
+				</p>
+				<p>
+					<a href="https://www.twitter.com" target="_blank"
+						>Twitter</a
+					>
+				</p>
+				<p>
+					<a href="https://www.instagram.com" target="_blank"
+						>Instagram</a
+					>
+				</p>
 			</div>
 			<div class="attribution">
 				Challenge by
